<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Limos</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="titulo_activity_cardapio_categorias">Categorias</string>
    <string name="titulo_activity_cardapio_produtos">Cardápio</string>
    <string name="titulo_activity_carrinho">Carrinho</string>
    <string name="titulo_activity_cashback_extrato">Extrato de Cashback</string>
    <string name="titulo_activity_cupons">Cupons</string>
    <string name="titulo_activity_cupons_resgatados">Meus Cupons</string>
    <string name="titulo_activity_endereco_buscar">Buscar Endereço</string>
    <string name="titulo_activity_endereco_cadastrado">Endereços</string>
    <string name="titulo_activity_endereco_cep">Novo Endereço</string>
    <string name="titulo_activity_endereco_cep_alterar">Alterar Endereço</string>
    <string name="titulo_activity_endereco_novo">Novo Endereço</string>
    <string name="titulo_activity_filtrar">Filtros</string>
    <string name="titulo_activity_indicar_restaurante">Indicar Restaurantes</string>
    <string name="titulo_activity_notificacao">Acompanhe seus pedidos</string>
    <string name="titulo_activity_pedidos">Pedidos</string>
    <string name="titulo_activity_pedidos_detalhes">Detalhes do pedido</string>
    <string name="titulo_activity_privacidade">Política de privacidade</string>
    <string name="titulo_activity_produto_adicionais">Adicionais</string>
    <string name="titulo_activity_produto_observacoes">Observações</string>
    <string name="titulo_activity_produto_opcionais">Opcionais</string>
    <string name="titulo_activity_sobre">Sobre</string>
    <string name="titulo_activity_termos">Termos de uso</string>
    <string name="titulo_home">Home</string>
    <string name="titulo_dashboard">Dashboard</string>
    <string name="titulo_notifications">Notifications</string>
    <string name="versao">Versão %1$s</string>
    <string name="enderecocomcomplemento">%1$s, %2$s - %3$s \n%4$s, %5$s - %6$s</string>
    <string name="enderecosemcomplemento">%1$s, %2$s \n%3$s, %4$s - %5$s</string>
    <string name="enderecolistacomcomplemento">%1$s, %2$s - %3$s</string>
    <string name="enderecolistasemcomplemento">%1$s, %2$s</string>
    <string name="usarsaldocashback">Você tem %1$s de saldo de cashback, vamos usar?</string>
    <string name="ganhebrinde">QUASE! Faça um pedido a partir de %1$s e ganhe um brinde</string>
    <string name="ganhoubrinde">PARABÉNS! Você atingiu a faixa de %1$s reais e ganhou um brinde</string>
    <string name="proximode">Próximo de %1$s</string>
    <string name="valorpedidominimo">O pedido mínimo deste restaurante é %1$s</string>
    <string name="saldocashback">Saldo cashback: %1$s</string>
    <string name="seusaldocashback">Seu saldo de cashback é de %1$s</string>
    <string name="errobuscarcep">Erro ao buscar o cep: %1$s</string>
    <string name="boasvindas">Olá %1$s</string>
    <string name="valorpedido">Valor do pedido %1$s</string>
    <string name="valorfrete">Entrega: %1$s</string>
    <string name="utilizandocashback">Você esta utilizando %1$s de cashback</string>
    <string name="utilizandodesconto">Você esta utilizando %1$s de desconto</string>
    <string name="trocopara">Troco para %1$s</string>
    <string name="voceescolheu">Você escolheu %1$s</string>
    <string name="errobuscarendereco">Erro ao buscar o endereço: %1$s</string>
    <string name="percentual">%1$s</string>
    <string name="preenchaocampo">Preencha o campo %1$s</string>
    <string name="qtproduto">%1$dx</string>
    <string name="complementoproduto">%1$s \n %2$s</string>
    <string name="numeropedido">N° do pedido: %1$s</string>
    <string name="datapedido">Data do pedido: %1$s</string>
    <string name="formapagamentopedido">Forma de pagamento: %1$s</string>
    <string name="buscarcep">Buscar CEP</string>
    <string name="naoseicep">Não sei o CEP</string>
    <string name="cep">CEP</string>
    <string name="termosservico">1. SERVIÇOS OFERECIDOS</string>
    <string name="termoscadastro">2. CADASTRO</string>
    <string name="termosuser">3. OBRIGAÇÕES DO USUÁRIO</string>
    <string name="termoslimos">4. OBRIGAÇÕES DO LIMOS</string>
    <string name="termosmodificacoes">5. MODIFICAÇÕES DESTE TERMO</string>
    <string name="termoscomunicacao">6. CANAL DE COMUNICAÇÃO</string>
    <string name="termosaceitacao">7. ACEITAÇÃO DO TERMO DE USO</string>
    <string name="termosforo">8. FORO DE ELEIÇÃO</string>
    <string name="complementarpedido">Que tal complementar o seu pedido</string>
    <string name="valoradicionais">Valor adicionais</string>
    <string name="salvardicionais">salvar adicionais</string>
    <string name="salvarobs">salvar observações</string>
    <string name="obsproduto">Use esse espaço pra deixar alguma observação para cozinha</string>
    <string name="exobs">Ex: Tirar alface, ponto da carne, maionese á parte etc…</string>
    <string name="termosdeuso0">Por favor, leia com atenção os termos e condições.
        Ao se cadastrar no www.limosapp.com.br você ESTÁ DE ACORDO COM AS CONDIÇÕES E TERMOS do app. Note que a recusa destes Termos do app impedirá que você faça pedidos de produtos do nosso app.
    </string>
    <string name="termosdeuso1">
        1.1 Este TERMO se aplica para regular o uso do serviço oferecido pelo www.limosapp.com.br aos USUÁRIOS, qual seja, possibilitar a escolha, pelos USUÁRIOS, de RESTAURANTES cadastrados e, via on-line, efetivar solicitações para aquisição (e entrega em domicílio e retirada no local) de gêneros alimentícios fornecidos pelos RESTAURANTES, de acordo com o cardápio disponibilizado, sendo possível, igualmente, aos USUÁRIOS, a efetivação do pagamento do preço dos produtos via on-line. \n\n
        1.2 O serviço do www.limosapp.com.br consiste, portanto, em aproximar, através do nosso site, os USUÁRIOS e os RESTAURANTES cadastrados, possibilitando que os USUÁRIOS encaminhem, aos RESTAURANTES, pedidos de entrega de gêneros alimentícios. \n\n
        1.3 Desde logo fica esclarecido ao USUÁRIO - o qual se declara ciente - que o serviço oferecido pelo www.limosapp.com.br se relaciona apenas à intermediação para comercialização de produtos alimentícios, não abarcando preparo, embalagem, disponibilização e entrega física (via motoboy ou outros meios) dos produtos, sendo esses quatro itens de responsabilidade integral do RESTAURANTE, a quem deverão ser direcionados quaisquer reclamos acerca de problemas decorrentes de vício, defeito ou inexecução da feitura, preparo e entrega de produtos alimentícios.
    </string>
    <string name="termosdeuso2" tools:ignore="Typos">
        2.1 O USUÁRIO, para utilizar os serviços acima descritos, deverá ter capacidade jurídica para atos civis e deverá, necessariamente, prestar as informações exigidas no CADASTRO, assumindo integralmente a responsabilidade (inclusive cível e criminal) pela exatidão e veracidade das informações fornecidas no CADASTRO, que poderá ser verificado, a qualquer momento, pelo www.limosapp.com.br. \n\n
        2.1.1 Em caso de informações incorretas, inverídicas ou não confirmadas, bem assim na hipótese da negativa em corrigi-las ou enviar documentação que comprove a correção, o Limos Delivery se reserva o direito de não concluir o cadastramento em curso ou, ainda, de bloquear o cadastro já existente, impedindo o USUÁRIO de utilizar os serviços on-line até que, a critério do www.limosapp.com.br, a situação de anomalia esteja regularizada. O www.limosapp.com.br se reserva o direito de impedir, a seu critério, novos CADASTROS, ou cancelar os já efetuados, em caso de ser detectada anomalia que, em sua análise, seja revestida de gravidade ou demonstre tentativa deliberada de burlar as regras aqui descritas, obrigatórias para todos os USUÁRIOS. Também agirá o www.limosapp.com.br de tal forma caso verifique descumprimento, pelo USUÁRIO, de qualquer obrigação prevista no presente TERMO. \n\n
        2.2 Efetuado, com sucesso, o CADASTRO, o USUÁRIO terá acesso aos serviços por meio de login e senha, dados esses que se compromete a não divulgar a terceiros, ficando sob sua exclusiva responsabilidade qualquer solicitação de serviço que seja feita com o uso de login e senha de sua titularidade.
    </string>
    <string name="termosdeuso3">
        3.1 Efetuado com sucesso o CADASTRO do USUÁRIO, este se obriga a não divulgar a terceiros login e senha de acesso, nem permitir o uso de tais informações por terceiros, responsabilizando-se pelas consequências do uso de login e senha de sua titularidade. \n\n
        3.2 É obrigação do USUÁRIO fornecer informações cadastrais totalmente verídicas e exatas, responsabilizando-se exclusiva e integralmente (em todas as searas jurídicas) por todo o conteúdo por si informado no item CADASTRO, mantendo atualizado e confirmado o endereço para entrega dos produtos encomendados. \n\n
        3.3 O USUÁRIO se obriga, também, a pagar integralmente o preço dos produtos por si solicitados ou encomendados ao RESTAURANTE e efetivamente a si entregues, seja por qualquer outra forma, diretamente ao portador dos produtos encomendados por meio deste site (dinheiro, cheque, tickets, etc.). \n\n
        3.4 O USUÁRIO que seja menor de 18 anos de idade está ciente de que não poderá encomendar e adquirir, em qualquer hipótese, produtos alcoólicos, responsabilizando-se pela correta informação de sua idade no item CADASTRO. \n\n
        3.5 O USUÁRIO concorda com o uso das informações de avaliações e feedbacks do serviços dos RESTAURANTES e do Limos, conforme descrito nos TERMOS DE PRIVACIDADE do Limos.
    </string>
    <string name="termosdeuso4">
        4.1 Disponibilizar no site www.limosapp.com.br espaço virtual que permita ao USUÁRIO devidamente cadastrado efetivar pedidos de compra de gêneros alimentícios anunciados e comercializados pelos RESTAURANTES. \n\n
        4.2 Proteger, por meio de armazenamento em servidores ou quaisquer outros meios magnéticos de alta segurança, a confidencialidade de todas as informações e cadastros relativos aos USUÁRIOS, assim como valores atinentes às operações financeiras advindas da operacionalização dos serviços previstos no presente TERMO. Contudo, não responderá pela reparação de prejuízos que possam ser derivados de apreensão e cooptação de dados por parte de terceiros que, rompendo os sistemas de segurança, consigam acessar essas informações.
    </string>
    <string name="termosdeuso5">
        5.1 O presente TERMO DE USO poderá, a qualquer tempo, ter seu conteúdo, ou parte dele, modificados para adequações e inserções, tudo com vistas ao aprimoramento dos serviços disponibilizados. \n\n
        5.2 As novas condições entrarão em vigência assim que sua veiculada no site, sendo possível ao USUÁRIO manifestar oposição a quaisquer dos termos modificados, desde que o faça por escrito, através do site www.limosapp.com.br, o que gerará o cancelamento de seu CADASTRO.
    </string>
    <string name="termosdeuso6">
        6.1 Para estabelecer contato entre www.limosapp.com.br e o USUÁRIO fica disponibilizado o endereço eletrônico deste link, sendo certo que o USUÁRIO se obriga, igualmente, a manter em seu cadastro endereço eletrônico atual por intermédio do qual se farão as comunicações a ele dirigidas pelo www.limosapp.com.br, desde logo emprestando-se validade jurídica e efetividade a esse meio eletrônico de troca de informações recíprocas.
    </string>
    <string name="termosdeuso7">
        7.1 O USUÁRIO declara ter lido, entendido e que aceita todas as regras, condições e obrigações estabelecidas no presente TERMO.
    </string>
    <string name="termosdeuso8">
        8.1 As partes elegem como competente para dirimir eventuais controvérsias que venham a surgir da interpretação e do cumprimento do presente TERMO o foro da Comarca de Indaiatuba - SP.\n\n
        Última atualização: 21 de janeiro de 2019
   </string>
</resources>