<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="br.com.limosapp.limos.EnderecoNovoActivity"
    tools:layout_editor_absoluteY="25dp">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txtBuscarCEP"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/buscarcep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCEP" />

    <TextView
        android:id="@+id/txtNaoSeiCEP"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/naoseicep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCEP" />

    <LinearLayout
        android:id="@+id/linearLayoutCEP"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputCEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="120dp">

            <EditText
                android:id="@+id/edtCEP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cep"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgFoto"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <ProgressBar
        android:id="@+id/pBarCEP"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCEP"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>
